# s3db

./: .gitignore  Cargo.toml  README.md  bench.sh  pgbench.py  profiles.py  upload-profiles.sh
.github/workflows/: benchmark.yaml  docs.yaml  mr_benchmark.yaml  profile.yaml  testing.yaml
grafana/: grafana.ini  run.sh
ra/: Cargo.toml
ra/benches/: parse.rs
ra/src/: aggregate.rs  condition.rs  context.rs  cte.rs  delete.rs  lib.rs  select.rs  types.rs  update.rs  value.rs
ra/src/value/: functions.rs
ra/tests/: parse_ra.rs  ra.rs
s3db/: Cargo.toml
s3db/benches/: execute-iai.rs  execute.rs  parse.rs
s3db/src/: endpoint.rs  execution.rs  lib.rs  main.rs  optimizer.rs  postgres.rs  ra.rs  storage.rs
s3db/src/execution/: algorithms.rs  naive.rs
s3db/src/execution/algorithms/: joins.rs
s3db/src/execution/algorithms/joins/: fallback.rs  naive.rs
s3db/src/execution/naive/: aggregate.rs  condition.rs  mapping.rs  pattern.rs  rainstr.rs  ravm.rs  value.rs
s3db/src/optimizer/: conditions.rs  noop.rs
s3db/src/postgres/: comms.rs  message.rs  response.rs
s3db/src/ra/: aggregate.rs  condition.rs  cte.rs  delete.rs  select.rs  types.rs  update.rs  value.rs
s3db/src/ra/value/: functions.rs
s3db/src/storage/: data.rs  inmemory.rs
s3db/tests/: naive_engine_select.rs  parse_ra.rs  queries.rs  ra.rs  transactions.rs
sql/: Cargo.toml  clippy.toml
sql/benches/: parse.rs
sql/src/: alter.rs  arenas.rs  common.rs  condition.rs  copy_.rs  create.rs  delete.rs  drop.rs  insert.rs  lib.rs  nom_util.rs  prepare.rs  select.rs  set_config.rs  transactions.rs  truncate.rs  update.rs  vacuum.rs  with_cte.rs
sql/src/arenas/: boxed.rs  vec.rs
sql/src/common/: aggregates.rs  datatype.rs  functions.rs  literal.rs  typemodifiers.rs  value.rs
sql/src/create/: sequence.rs  table.rs
sql/src/select/: combine.rs  group.rs  order.rs  tableexpr.rs
sql/tests/: errors.rs  parse_sql.rs  sql.rs
src/: execution.rs  lib.rs  main.rs  postgres.rs  ra.rs  sql.rs  storage.rs
src/execution/: naive.rs
src/execution/naive/: aggregate.rs  pattern.rs
src/optimizer/: conditions.rs
src/postgres/: comms.rs  message.rs  response.rs
src/ra/: aggregate.rs  condition.rs  context.rs  cte.rs  delete.rs  types.rs  update.rs  value.rs
src/sql/: alter.rs  common.rs  condition.rs  create.rs  delete.rs  drop.rs  insert.rs  prepare.rs  select.rs  set_config.rs  transactions.rs  truncate.rs  update.rs  with_cte.rs
src/sql/common/: datatype.rs  functions.rs  literal.rs
src/sql/select/: combine.rs  order.rs  tableexpr.rs
src/storage/: data.rs  inmemory.rs  schema.rs
storage/: Cargo.toml
storage/benches/: execute.rs
storage/src/: composed.rs  data.rs  inmemory.rs  lib.rs  mvcc.rs  schema.rs
storage/src/inmemory/: blocklist.rs  v1.rs  v2.rs
storage/src/inmemory/blocklist/: iter.rs  lock.rs
storage/src/inmemory/v2/: internal.rs
tests/: naive_engine_select.rs  parse_ra.rs  parse_sql.rs  queries.rs  ra.rs  sql.rs  sql_parse.rs  transactions.rs
vm/: Cargo.toml
vm/examples/: arith.rs
vm/examples-old/: arith.rs
vm/src/: io.rs  lib.rs
vm/tests/: arithmetic.rs
