[package]
name = "s3db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql = { path = "../sql" }

bytes = "1.5.0"
futures = "0.3.30"
nom = "7.1.3"
tokio = { version = "1.36.0", default-features = false, features = ["io-util", "rt", "net", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

bumpalo = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion = { version = "0.5.1", features = ["async_futures"] }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "execute"
harness = false
