[package]
name = "s3db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql = { path = "../sql" }
storage = { path = "../storage" }
ra = { path = "../ra/" }
vm = { path = "../vm/" }

bytes = "1.5.0"
futures = { workspace = true }
nom = "7.1.3"
tokio = { version = "1.36.0", default-features = false, features = ["io-util", "rt", "net", "macros", "signal", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

bumpalo = { workspace = true }
console-subscriber = "0.2.0"

pprof = { version = "0.13.0", features = ["flamegraph", "criterion", "protobuf-codec", "protobuf"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
iai-callgrind = { version = "0.10.2" }

[[bench]]
name = "execute"
harness = false

[[bench]]
name = "execute-iai"
harness = false
