[package]
name = "sql"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.3"
bumpalo = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion = "0.5.1"

[target.'cfg(flamegraph)'.dependencies]
pprof = { version = "0.13.0", features = ["flamegraph", "criterion", "protobuf-codec"] }


[[bench]]
name = "parse"
harness = false
