[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
sql = { path = "../sql" }

futures = "0.3.30"
tracing = "0.1.40"

[target.'cfg(not(loom))'.dependencies]
tokio = { version = "1.36.0", default-features = false, features = ["io-util", "rt", "net", "macros", "time"] }

[target.'cfg(not(loom))'.dev-dependencies]
tokio = { version = "1.36.0", default-features = false, features = ["io-util", "rt", "net", "macros", "time"] }
criterion = { version = "0.5.1", features = ["async_tokio"] }

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = [] }

[target.'cfg(flamegraph)'.dependencies]
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }


[[bench]]
name = "execute"
harness = false
